--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django                        3.1.4
 django-environ                0.4.5
 djangorestframework           3.12.2
 djangorestframework-simplejwt 4.6.0
+gunicorn                      20.0.4
 idna                          2.10
 pip                           20.3.1
 PyJWT                         1.7.1
